notification.close() not working https://bugs.webkit.org/show_bug.cgi?id=248309 rdar://problem/102683841

Reviewed by Chris Dumez.

Make sure to mark the notifications as showing so that close actually does something.
Covered by API test.

* Source/WebCore/workers/service/ServiceWorkerContainer.cpp:
(WebCore::ServiceWorkerContainer::getNotifications):
* Tools/TestWebKitAPI/TestNotificationProvider.cpp:
(TestWebKitAPI::closeWebNotification):
(TestWebKitAPI::TestNotificationProvider::TestNotificationProvider):
(TestWebKitAPI::TestNotificationProvider::showWebNotification):
(TestWebKitAPI::TestNotificationProvider::closeWebNotification):
(TestWebKitAPI::TestNotificationProvider::resetHasReceivedNotification):
* Tools/TestWebKitAPI/TestNotificationProvider.h:
(TestWebKitAPI::TestNotificationProvider::hasReceivedShowNotification const):
(TestWebKitAPI::TestNotificationProvider::hasReceivedCloseNotification const):
(TestWebKitAPI::TestNotificationProvider::hasReceivedNotification const): Deleted.
(TestWebKitAPI::TestNotificationProvider::resetHasReceivedNotification): Deleted.
* Tools/TestWebKitAPI/Tests/WebKitCocoa/PushAPI.mm:

Canonical link: https://commits.webkit.org/257108@main